using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Resources
{
    public static int Idle = Animator.StringToHash("Idle");
    public static int Move = Animator.StringToHash("Move");
    public static int Jump = Animator.StringToHash("Jump");
    public static int yVelocity = Animator.StringToHash("yVelocity");
    public static int Dash = Animator.StringToHash("Dash");
    public static int WallSlide = Animator.StringToHash("WallSlide");
}
